--- a/openorder.html
+++ b/openorder.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/Grabify.css" />
+    <link rel="stylesheet" href="Grabify.css" />
     <title>openorder</title>
-    <script src="js/jQuery3.7.1.js"></script>
-    <script src="js/grabify.js"></script>
+    <script src="jQuery3.7.1.js"></script>
+    <script src="grabify.js"></script>
   </head>
   <body>
     <div id="table-container">
