--- a/orderHistory.html
+++ b/orderHistory.html
@@ -4,9 +4,9 @@
     <title>ordershistory</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/Grabify.css" />
-    <script src="js/jQuery3.7.1.js"></script>
-    <script src="js/grabify.js"></script>
+    <link rel="stylesheet" href="Grabify.css" />
+    <script src="jQuery3.7.1.js"></script>
+    <script src="grabify.js"></script>
 </head>
 <body>
     <div id="table-container">
